samples/_failures_safe/1761436694_13a52b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f7d2d18.c: In function ‘main’:
./samples/SAFE/__tmp_4f7d2d18.c:185:34: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  185 |     printf("Tokens found: %d\n", token
      |                                  ^~~~~
      |                                  Token
./samples/SAFE/__tmp_4f7d2d18.c:185:34: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4f7d2d18.c:185:39: error: expected ‘)’ at end of input
  185 |     printf("Tokens found: %d\n", token
      |           ~                           ^
      |                                       )
./samples/SAFE/__tmp_4f7d2d18.c:185:5: error: expected declaration or statement at end of input
  185 |     printf("Tokens found: %d\n", token
      |     ^~~~~~
